--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 -----
 
+0.0.2    2026-02-02
+    [Fixed]
+       * Use MetaProvides::Class to detect class versions declared
+
 0.0.1    2026-02-02
     Initial release
